Card Title Format

--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
     <!-- <h1>Dept of Design Certificates</h1> -->
     <h1>Dept of Design Certificates</h1>
 
-    <h2>Front-end Web Design</h2>
+    <div class="card-title">
+    
+    <h2 id="front-end">Front-end Web Design</h2>
+
+    <h2>UX Design</h2>
+
+    <h2>Motion and Animation</h2>
+
+    <h2>3D Design</h2>
+
+    <h2 id="game-design">Game Design</h2>
+
+    </div>
 
     <div class="card-layout card-layout-mobile">
     <!-- Card 1 -->
@@ -42,6 +54,7 @@
             </section>
 
             <section class="back face">
+
                 <p>Front-end web design is the practice of creating websites that are visually appealing and easy to use. 
                 Front-end web designers use HTML, CSS, and JavaScript to create websites that are functional 
                 and responsive.</p>
@@ -65,7 +78,6 @@
 
             <section class="back face">
 
-                <h2>UX Design</h2>
                 <p>User experience design (UXD) is the process of enhancing user satisfaction by improving the usability,
                 accessibility, and pleasure provided in the interaction between the user and the product.</p>
                 <p>Average Salary: <span class="salary">$95,421</span></p>
@@ -88,7 +100,6 @@
 
             <section class="back face">
 
-                <h2>Motion and Animation</h2>
                 <p>Motion and animation is the art of creating the illusion of movement by displaying a sequence of
                 static images in rapid succession. Motion graphics are similar to traditional animation, but they are
                 created using digital tools and techniques.</p>
@@ -112,7 +123,6 @@
 
             <section class="back face">
 
-                <h2>3D Design</h2>
                 <p>3D design is the process of using software to create a mathematical representation of a 3-dimensional
                 object or shape. The creation of a 3D model can be achieved using specialized software or a 3D printer.</p>
                 <p>Average Salary: <span class="salary">$56,867</span></p>
@@ -135,7 +145,6 @@
 
             <section class="back face">
 
-                <h2>Game Design</h2>
                 <p>Game design is the art of creating games. Game designers create the rules, goals, and challenges
                 that define a game. They also design the characters, objects, and environments that players interact
                 with while playing a game.</p>
