--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
      <link rel="stylesheet" href="style.css" media="screen">
      <!-- Print Stylesheet -->
      <link rel="stylesheet" href="print.css" media="print">
+     <!-- Font Style -->
+     <link rel="stylesheet" href="plein.css">
 
     <!-- Scripts -->
     <script src="script.js" defer></script>
