--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 
 <body>
 
-    <!-- <h1>Dept of Design Certificates</h1> -->
     <h1>Dept of Design Certificates</h1>
 
-    <div class="card-title">
+    <div class="card-title card-title-mobile">
     
     <h2 id="front-end">Front-end Web Design</h2>
 
