--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <h2>3D Design</h2>
 
-    <h2 id="game-design">Game Design</h2>
+    <h2 id="game-design game-design-mobile">Game Design</h2>
 
     </div>
 
