--- a/index.html
+++ b/index.html
@@ -29,20 +29,6 @@
 
     <h1>Dept of Design Certificates</h1>
 
-    <div class="card-title card-title-mobile">
-    
-    <h2 id="front-end">Front-end Web Design</h2>
-
-    <h2>UX Design</h2>
-
-    <h2>Motion and Animation</h2>
-
-    <h2>3D Design</h2>
-
-    <h2 id="game-design game-design-mobile">Game Design</h2>
-
-    </div>
-
     <div class="card-layout card-layout-mobile">
     <!-- Card 1 -->
     <article class="scene">
@@ -51,6 +37,7 @@
             <section class="face">
 
                 <img class="image" src="https://live.staticflickr.com/6125/5946031522_160cb8981a_b.jpg" alt="Front-end Web Design">
+                <h2 class="card-title">Front-end Web Design</h2>
 
             </section>
 
@@ -74,6 +61,7 @@
 
                 <img class="image" src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-4.0.3&ixid=
                 MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1055&q=80" alt="UX Design">
+                <h2 class="card-title" id="ux-title">UX Design</h2>
 
             </section>
 
@@ -96,6 +84,7 @@
 
                 <img class="image" src="https://images.unsplash.com/photo-1523815378073-a43ae3fbf36a?ixlib=rb-4.0.3&ixid=
                 MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" alt="Motion and Animation">
+                <h2 class="card-title">Motion and Animation</h2>
 
             </section>
 
@@ -119,6 +108,7 @@
 
                 <img class="image" src="https://images.unsplash.com/photo-1633118244244-45fa4104942f?ixlib=rb-4.0.3&ixid=
                 MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80" alt="3D Design">
+                <h2 class="card-title" id="three-d-title">3D Design</h2>
 
             </section>
 
@@ -141,6 +131,7 @@
 
                 <img class="image" src="https://images.unsplash.com/photo-1585844621420-c0c2f393ab71?ixlib=rb-4.0.3&ixid=
                 MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80" alt="Game Design">
+                <h2 class="card-title" id="game-design-title">Game Design</h2>
 
             </section>
 
