--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section class="face">
 
                 <img class="image" src="https://live.staticflickr.com/6125/5946031522_160cb8981a_b.jpg" alt="Front-end Web Design">
-                <h2 class="card-title">Front-end Web Design</h2>
+                <h2 class="card-title">Front-End Web Design</h2>
 
             </section>
 
